# data-eng-blog

./: .gitignore  .pre-commit-config.yaml
a-random-walk-down-wall-street/: pyproject.toml  random_walk.ipynb
cuped/: cuped.ipynb  pyproject.toml  utils.py  varunr.mplstyle
incremental-dbt/: .gitignore  dbt_project.yml  pyproject.toml
incremental-dbt/data/: user_transactions.csv
incremental-dbt/models/final/: attempt_1.sql  attempt_1_fixed.sql  attempt_2.sql  attempt_3.sql  attempt_pivot_incremental.sql  attempt_single_tuple_incremental.sql
retry-driven-development/: README.md  pyproject.toml
retry-driven-development/tests/: test_retry_driven_development.py
simple-pandas/: pyproject.toml  simple_pandas.ipynb
simple-pandas/.ipynb_checkpoints/: simple_pandas-checkpoint.ipynb
