[tool.poetry]
name = "cuped"
version = "0.1.0"
description = ""
authors = ["Varun Rajan <varun.p.rajan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
pandas = "^2.3.3"
statsmodels = "^0.14.6"
seaborn = "^0.13.2"
matplotlib = "^3.10.7"
pre-commit = "^4.5.0"
ipykernel = "^7.1.0"
jupyterlab = "^4.5.0"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
