[tool.poetry]
name = "incremental-dbt"
version = "0.1.0"
description = ""
authors = ["Varun Rajan <varun.rajan@hey.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dbt = "^0.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
