[tool.poetry]
name = "retry-driven-development"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.5"
dynaconf = "^2.2.3"
boto3 = "^1.16.41"
SQLAlchemy = "^1.3.22"
direnv = "^2020.12.3"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
